--- a/CredAvenueMobile/package.json
+++ b/CredAvenueMobile/package.json
@@ -6,7 +6,8 @@
     "ios": "expo start --ios",
     "web": "expo start --web",
     "eject": "expo eject",
-    "test": "jest --watchAll"
+    "test": "jest --watchAll",
+    "start:staging": "ENVFILE=.env.staging expo start"
   },
   "jest": {
     "preset": "jest-expo"
@@ -23,7 +24,9 @@
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.0.tar.gz",
+    "react-native-config": "^0.12.0",
     "react-native-gesture-handler": "~1.5.0",
+    "react-native-material-ui": "^1.30.1",
     "react-native-reanimated": "~1.4.0",
     "react-native-screens": "2.0.0-alpha.12",
     "react-native-web": "~0.11.7",
