--- a/CredAvenueMobile/package.json
+++ b/CredAvenueMobile/package.json
@@ -23,14 +23,17 @@
     "expo-web-browser": "~8.0.0",
     "humps": "^2.0.1",
     "lodash": "^4.17.15",
+    "prop-types": "^15.7.2",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.0.tar.gz",
+    "react-native-chart-kit": "^4.3.0",
     "react-native-config": "^0.12.0",
     "react-native-gesture-handler": "~1.5.0",
     "react-native-material-ui": "^1.30.1",
     "react-native-reanimated": "~1.4.0",
     "react-native-screens": "2.0.0-alpha.12",
+    "react-native-svg": "^10.0.0",
     "react-native-tab-view": "^2.11.0",
     "react-native-web": "~0.11.7",
     "react-navigation": "~4.0.10",
