--- a/CredAvenueMobile/package.json
+++ b/CredAvenueMobile/package.json
@@ -27,6 +27,7 @@
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.0.tar.gz",
+    "react-native-action-button": "^2.8.5",
     "react-native-chart-kit": "^4.3.0",
     "react-native-config": "^0.12.0",
     "react-native-gesture-handler": "~1.5.0",
@@ -35,6 +36,7 @@
     "react-native-screens": "2.0.0-alpha.12",
     "react-native-svg": "^10.0.0",
     "react-native-tab-view": "^2.11.0",
+    "react-native-vector-icons": "^6.6.0",
     "react-native-web": "~0.11.7",
     "react-navigation": "~4.0.10",
     "react-navigation-stack": "~1.10.3",
